--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,27 @@
+@import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css");
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 20px;
+}
+
+form {
+  border-radius: 5px;
+  background-color: #bada55;
+  padding: 20px;
+  width: 300px;
+}
+
+h5 {
+  margin-bottom: 0px;
+}
+
+#search{
+
+
+}
+
+#list{
+
+
 }
